--- a/gb/gil_blas.html
+++ b/gb/gil_blas.html
@@ -3,6 +3,8 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <title>Gil Blas</title>
+   <meta name="author" content="Alain René Lesage" />
+   <meta name="translator" content="Tobias Smollett" />
    <style>
       div#center { text-align: center; }
       div#leftQuote
@@ -19,6 +21,18 @@
          padding-right: 20%;
       }
    </style>
+
+<!--
+
+Digital Sources:
+
+1819 Edition:
+http://archive.org/details/adventuresofgilb01lesauoft
+http://archive.org/details/adventuresofgilb22lesauoft
+http://archive.org/details/adventuresofgilb03lesauoft
+
+-->
+
 </head>
 <body>
 
