--- a/hf/harry_franco.html
+++ b/hf/harry_franco.html
@@ -7,6 +7,17 @@
    <style>
       div#center { text-align: center; }
    </style>
+
+<!--
+
+Digital Sources:
+
+1839 Edition:
+https://archive.org/details/adventuresofharr00brigrich
+https://books.google.com/books?id=BuUxAQAAMAAJ
+
+-->
+
 </head>
 <body>
 
