--- a/kahf/kahf.html
+++ b/kahf/kahf.html
@@ -3,11 +3,24 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <title>Krilof and his Fables</title>
+   <meta name="author" content="Ivan Krylov" />
+   <meta name="translator" content="William Ralston Shedden-Ralston" />
    <style>
       div#title { text-align: center; }
       div#author { text-align: right; }
       ul { list-style: none; }
    </style>
+
+<!--
+
+Digital Sources:
+
+1883 Edition:
+http://archive.org/details/krilofhisfables00kryluoft
+http://books.google.com/books?id=AfANAAAAIAAJ
+
+-->
+
 </head>
 <body>
 
