--- a/mc/modern_chivalry.html
+++ b/mc/modern_chivalry.html
@@ -3,6 +3,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <title>Modern Chivalry</title>
+   <meta name="author" content="Hugh Henry Brackenridge" />
    <style>
       div#center { text-align: center; }
       div#leftQuote
@@ -19,6 +20,20 @@
          padding-right: 20%;
       }
    </style>
+
+<!--
+
+Digital Sources:
+
+1819 Edition:
+
+http://xroads.virginia.edu/~Hyper2/Chivalry/index.html
+http://archive.org/details/modernchivalryco_01brac
+http://archive.org/details/modernchivalryco02brac
+
+-->
+
+
 </head>
 <body>
 
