--- a/mms/martinus_scriblerus.html
+++ b/mms/martinus_scriblerus.html
@@ -5875,7 +5875,7 @@ that Philosopher the same injustice.</p>
 
 <p><span class="sup"><a href="#r16" id="n16">16</a></span><i>Gulliver's Travels</i> were first intended as a part of Scriblerus's Memoirs.</p>
 
-<p><span class="sup"><a href="#r17" id="n17">17</a></span><i>Swift's ironical tract on that subject.</p>
+<p><span class="sup"><a href="#r17" id="n17">17</a></span>Swift's ironical tract on that subject.</p>
 
 </div>
 
